content/public/android/java/src/org/chromium/content/browser/accessibility/KitKatBrowserAccessibilityManager.java
@@ -30,7 +30,8 @@ public class KitKatBrowserAccessibilityManager extends BrowserAccessibilityManag
 
     @Override
     protected void setAccessibilityNodeInfoKitKatAttributes(AccessibilityNodeInfo node,
-            boolean isRoot, boolean isEditableText, String roleDescription) {
+            boolean isRoot, boolean isEditableText, String roleDescription, int selectionStartIndex,
+            int selectionEndIndex) {
         Bundle bundle = node.getExtras();
         bundle.putCharSequence("AccessibilityNodeInfo.roleDescription", roleDescription);
         if (isRoot) {
@@ -39,6 +40,7 @@ public class KitKatBrowserAccessibilityManager extends BrowserAccessibilityManag
         }
         if (isEditableText) {
             node.setEditable(true);
+            node.setTextSelection(selectionStartIndex, selectionEndIndex);
         }
     }
 }
